k8s/manifests/generated/api-gateway.yaml
---
# Source: api-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-getway-api-gateway
  labels:
    helm.sh/chart: api-gateway-0.1.0
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/instance: api-getway
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 8080 # Sera 8080

      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/instance: api-getway
---
# Source: api-gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-getway-api-gateway
  labels:
    helm.sh/chart: api-gateway-0.1.0
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/instance: api-getway
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
      app.kubernetes.io/instance: api-getway
  template:
    metadata:
      labels:
        helm.sh/chart: api-gateway-0.1.0
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/instance: api-getway
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: api-getway-api-gateway
      containers:
        - name: api-gateway
          image: "bechir19/api-gateway:latest"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
---
# Source: api-gateway/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-getway-api-gateway
  labels:
    helm.sh/chart: api-gateway-0.1.0
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/instance: api-getway
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "api.local"
      http:
        paths:
          - path: /actuator/health
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-getway-api-gateway
                port:
                  number: 9000
---
# Source: api-gateway/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "api-getway-api-gateway-test-connection"
  labels:
    helm.sh/chart: api-gateway-0.1.0
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/instance: api-getway
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['api-getway-api-gateway:9000']
  restartPolicy: Never
