k8s/manifests/generated/inventory-service.yaml
---
# Source: inventory-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8082"
  labels:
    helm.sh/chart: inventory-service-0.1.0
    app.kubernetes.io/name: inventory-service
    app.kubernetes.io/instance: inventory-service
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: inventory-service
    app.kubernetes.io/instance: inventory-service
---
# Source: inventory-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  labels:
    helm.sh/chart: inventory-service-0.1.0
    app.kubernetes.io/name: inventory-service
    app.kubernetes.io/instance: inventory-service
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory-service
      app.kubernetes.io/instance: inventory-service
  template:
    metadata:
      labels:
        helm.sh/chart: inventory-service-0.1.0
        app.kubernetes.io/name: inventory-service
        app.kubernetes.io/instance: inventory-service
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: default
      containers:
        - name: inventory-service
          image: "bechir19/inventory-service:v2"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8082
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
---
# Source: inventory-service/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-service
  labels:
    helm.sh/chart: inventory-service-0.1.0
    app.kubernetes.io/name: inventory-service
    app.kubernetes.io/instance: inventory-service
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "inventory-service.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-service
                port:
                  number: 8082
---
# Source: inventory-service/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "inventory-service-test-connection"
  labels:
    helm.sh/chart: inventory-service-0.1.0
    app.kubernetes.io/name: inventory-service
    app.kubernetes.io/instance: inventory-service
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['inventory-service:8082']
  restartPolicy: Never
